# unbihexium

./: .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  NOTICE  PRIVACY.md  README.md  RESPONSIBLE_USE.md  SECURITY.md  SUPPORT.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  coverage.yml  docker.yml  docs.yml  integration.yml  model-assets.yml  provenance.yml  publish.yml  release.yml  repo-audit.yml  sbom.yml  scorecard.yml  secrets-audit.yml  security.yml  slsa.yml
deploy/helm/unbihexium/: Chart.yaml  values.yaml
deploy/kubernetes/: deployment.yaml
docs/: MIGRATION.md  faq.md  glossary.md  index.md  style_guide.md  toc.md
docs/architecture/: overview.md
docs/benchmarks/: BENCHMARKS.md
docs/capabilities/: 01_ai_products.md  02_tourism_data_processing.md  03_indices_flood_water.md  04_environment_forestry_image_processing.md  05_asset_management_energy.md  06_urban_agriculture.md  07_risk_defense_neutral.md  08_value_added_imagery.md  09_benefits_narrative.md  10_satellite_imagery_features.md  11_resolution_metadata_qa.md  12_radar_sar.md  index.md
docs/figures/: README.md
docs/getting_started/: installation.md  quickstart.md
docs/model_zoo/: catalog.md  distribution.md  model_catalog.md
docs/reference/: api.md  cli.md
docs/security/: model_integrity.md  responsible_use.md  secrets_and_tokens.md  vulnerability_management.md
docs/tutorials/: detection.md  geostat.md  index.md  indices.md  notebooks.md
examples/notebooks/: 001_accessibility_analyzer.ipynb  002_aircraft_detector.ipynb  003_asset_condition_change.ipynb  004_beekeeping_suitability.ipynb  005_border_monitor.ipynb  006_building_detector.ipynb  007_builtup_detector.ipynb  008_business_valuation.ipynb  009_change_detector.ipynb  010_cloud_mask.ipynb  011_construction_monitor.ipynb  012_coregistration.ipynb  013_corridor_monitor.ipynb  014_crop_boundary_delineation.ipynb  015_crop_classifier.ipynb  016_crop_detector.ipynb  017_crop_growth_monitor.ipynb  018_crop_health_assessor.ipynb  019_damage_assessor.ipynb  020_deforestation_detector.ipynb  021_dem_generator.ipynb  022_desertification_monitor.ipynb  023_digitization_2d.ipynb  024_digitization_3d.ipynb  025_disaster_management.ipynb  026_drought_monitor.ipynb  027_dsm_generator.ipynb  028_dtm_generator.ipynb  029_economic_spatial_assessor.ipynb  030_emergency_disaster_manager.ipynb  031_encroachment_detector.ipynb  032_energy_potential.ipynb  033_environmental_monitor.ipynb  034_environmental_risk.ipynb  035_erosion_detector.ipynb  036_evi_calculator.ipynb  037_field_surveyor.ipynb  038_fire_monitor.ipynb  039_flood_risk.ipynb  040_flood_risk_assessor.ipynb  (+90 more)
model_zoo/: capability_to_models.yaml  checksums.txt  inventory.yaml  manifest.schema.json
model_zoo/assets/tiny/: README.md  accessibility_analyzer_tiny.pt  aircraft_detector_tiny.pt  asset_condition_change_tiny.pt  beekeeping_suitability_tiny.pt  border_monitor_tiny.pt  building_detector_tiny.pt  builtup_detector_tiny.pt  business_valuation_tiny.pt  change_detector_tiny.pt  cloud_mask_tiny.pt  construction_monitor_tiny.pt  coregistration_tiny.pt  corridor_monitor_tiny.pt  crop_boundary_delineation_tiny.pt  crop_classifier_tiny.pt  crop_detector_tiny.pt  crop_growth_monitor_tiny.pt  crop_health_assessor_tiny.pt  damage_assessor_tiny.pt  deforestation_detector_tiny.pt  dem_generator_tiny.pt  desertification_monitor_tiny.pt  digitization_2d_tiny.pt  digitization_3d_tiny.pt  disaster_management_tiny.pt  drought_monitor_tiny.pt  dsm_generator_tiny.pt  dtm_generator_tiny.pt  economic_spatial_assessor_tiny.pt  emergency_disaster_manager_tiny.pt  encroachment_detector_tiny.pt  energy_potential_tiny.pt  environmental_monitor_tiny.pt  environmental_risk_tiny.pt  erosion_detector_tiny.pt  evi_calculator_tiny.pt  field_surveyor_tiny.pt  fire_monitor_tiny.pt  flood_risk_assessor_tiny.pt  (+91 more)
model_zoo/cards/: aircraft_detector_base.md  aircraft_detector_large.md  aircraft_detector_tiny.md
scripts/: build_all_model_artifacts.py  build_synthetic_datasets.py  create_all_models.py  docs_lint.py  export_all_models.py  generate_all_models.py  generate_figures.py  generate_inventory.py  link_check.py  manifest_validate.py  model_artifact_audit.py  repo_audit.py  secrets_audit.py  train_all_models.py  unbihexium-completion.bash  validate_models.py
src/unbihexium/: __init__.py  _version.py
src/unbihexium/ai/: __init__.py  detection.py  segmentation.py  super_resolution.py
src/unbihexium/analysis/: __init__.py  network.py  suitability.py  zonal.py
src/unbihexium/cli/: __init__.py  main.py
src/unbihexium/core/: __init__.py  evidence.py  index.py  model.py  pipeline.py  product.py  raster.py  scene.py  sensor.py  tile.py  vector.py
src/unbihexium/io/: geojson.py  (+5 more)
tests/: conftest.py
tests/fixtures/: README.md  dem_sample.npy  mask_sample.npy  sentinel2_sample.npy
tests/unit/: test_core.py  test_geostat.py  test_zoo.py
(+2213 files in other folders)
